# Sheathed-Edge

./: .gitignore  .webui_secret_key  README.md  tmp-gateway-chat.json  tmp-gateway-toolcall.json  tmp-repro-gateway.sh
.github/workflows/: backend-ci.yml
Agent/: README.md  action-envelope.schema.json  gateway.config.json  host-control.config.json  http-contract.md  llama-server.config.json  mcp-servers.json  mcp-tool-cache.json  model-profiles.json  ssh-hosts.json  tool-router.config.json  user-settings.json
Agent/gateway-go/: go.mod
Agent/host-control-rs/: Cargo.toml
Agent/tool-router-rs/: Cargo.toml
Agent/tool-router-rs/src/: api.rs  config.rs  logging.rs  main.rs  mcp.rs  models.rs  policy.rs  registry.rs  ssh.rs
Agent/tool-router-rs/src/executor/: mod.rs  reserved.rs  search.rs  terminal.rs
Core/awdp/: mode.json
Datasets/: README.md
Datasets/reverse/: README.md
Docs/: 服务与工具启动手册.md
Docs/Log/: 2026-03-27.txt  2026-03-28.txt  2026-03-29.txt  2026-03-30.txt  2026-03-31.txt
Docs/Plan/: AI操作指南.md  Gateway管理GUI计划.md  README.md  后端架构.md  待办事项.md  本地AI架构计划.md
Eval/: README.md
Eval/reverse/: README.md
Logs/: README.md
MCP/: registry.json  registry.schema.json
Plan/: 本地模型系统计划书.md
Plugins/pwn/: plugin.json
Plugins/web/: plugin.json
Skills/: README.md
Templates/: README.md
Training/axolotl/: README.md
Workflows/: startup-order.md
Workflows/windows/: check-llama-server.ps1  install-llama-server.ps1  start-llama-server.ps1
Workflows/wsl/: bootstrap-ubuntu.sh  check-open-webui.sh  install-open-webui.sh  (+6 more)
Writeups/: README.md
(+103 files in other folders)
