[package]
name = "tool-router-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
jsonschema = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
