[package]
name = "tool-router-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
jsonschema = "0.33"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
russh = { version = "0.58", default-features = false, features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.21"
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
